--- a/CSS/women.css
+++ b/CSS/women.css
@@ -1,1 +1,165 @@
-h1{font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
+/*import fonts from google fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+/* css reset */
+* {
+    padding: 0;
+    Margin: 0;
+    font-size: 100%;
+    line-height: 1em;
+}
+
+/*default styles for whole page*/
+body {
+    color: darkgreen;
+    border-color: black;
+    background-color: whitesmoke;
+}
+
+/* content container to centre content */
+.container {
+    max-width: 1020px;
+    margin: 0 auto 0 auto;
+}
+
+/*default styling for headings*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'oswald', Courier, sans-serif;
+    line-height: 1.1;
+    font-weight: 700;
+}
+
+/*specific sstyles*/
+h1 {
+    font-size: 4.25rem;
+    margin-bottom: 2rem;
+    font-weight: 900;
+}
+
+h2 {
+    font-size: 2.25rem;
+    margin-bottom: .5rem;
+}
+
+h3 {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+h4 {
+    font-size: 1.75;
+    margin-bottom: 0.2;
+}
+
+/* Paragraphs */
+p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    font-size: 1.125rem;
+    margin-bottom: 1.5rem;
+    font-style: normal;
+}
+
+/*paragraph large */
+p.large {
+    font-weight: 400;
+    font-style: italic;
+    line-height: 1.5;
+    font-size: 1.5rem;
+    margin-bottom: 2.5rem;
+    font-family: "Playfair Display", Georgia, 'Times New Roman', Times,
+}
+
+ul {
+    list-style: disc outside;
+    margin-bottom: 1.5rem;
+    margin-left: 1.25rem;
+}
+
+ul li {
+    font-family: "Source Sans 3", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    font-size: 1.125rem;
+    margin-bottom: .5rem;
+}
+
+/* hyperlinks */
+a {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    color: #8f95ff;
+}
+
+a:hover {
+    color: #00447B;
+}
+
+a:visited {
+      color: #6935d2;
+}
+
+    /* images*/
+    img {
+        max-width: 1020px;
+        width: 100%;
+        height: auto;
+        border: 4px solid #101010;
+        margin-bottom: 2rem;
+    }
+
+    /*blockquote*/
+    figure.quote {
+        border-left: 8px solid #008c1a;
+        padding: 1.5rem 0 1.5rem 2rem;
+        margin-bottom: 2rem;
+    }
+
+    figure.quote p {
+        margin-bottom: 0;
+    }
+
+    figure.quote blockquote {
+        margin-bottom: .5rem;
+    }
+
+    figure.quote figcaption p {
+        font-weight: 700;
+    }
+    footer {
+        padding: 1.5rem 0 1.5rem 0;
+        margin-top:2rem;
+        border-top:1px solid #008209;
+        }
+        main{
+            margin-bottom: 2.5rem;
+            }
+
+            header{
+                border-bottom:2px solid #101010;
+                padding:1.5rem 0;
+                }
+                header p.logo{
+                font-weight: 700;
+                margin-bottom:0;
+                font-size:1.75rem;
+                line-height: 1.1;
+                }
+
+                .colour-block{
+                    padding:3rem 0 3rem 0;
+                    background-color:#b9ffb1;
+                    margin-bottom:2.5rem;
+                    }
+
+                    .highlight {
+                        background-color: #ffffffb4;
+                        padding:0 0.5rem;
+                        } 
