--- a/CSS/women.css
+++ b/CSS/women.css
@@ -183,6 +183,9 @@ a:visited {
     }
 }
 @media only screen and (max-width: 768px) {
+    .grid {
+        flex-direction: column;
+    }
 }
 @media only screen and (max-width: 600px) {
 .container {
