--- a/CSS/women.css
+++ b/CSS/women.css
@@ -191,4 +191,39 @@ a:visited {
 .container {
 margin: 0 16px 0 16px;
 }
+h1{
+    font-size: 2.25rem;
+    margin-bottom: 1rem;
 }
+h2{
+    font-size: 1.875rem;
+}
+h3{
+    font-size: 1.5rem;
+}
+h4{
+    font-size: 1.25rem;
+}
+}
+p.large {
+    font-size: 1.25rem;
+    margin-bottom:2rem;
+}
+p{
+    font-size: 1rem;
+    margin-bottom: 1rem;
+}
+
+ul {
+    margin-bottom: 1rem;
+    }
+    ul li {
+    font-size: 1rem;
+    margin-bottom: .5rem;
+    }
+    header p.logo{
+        font-size: 1.25rem;
+    }
+    .colour-block{
+        padding:2rem;
+    }
